--- a/extracted.bib
+++ b/extracted.bib
@@ -26,6 +26,98 @@
                    terrestrial elemental isotopic ratio.},
 }
 
+@article{Milam2007a,
+  author =        {{Milam}, S.~N. and {Apponi}, A.~J. and {Woolf}, N.~J. and
+                   {Ziurys}, L.~M.},
+  journal =       {\apjl},
+  month =         oct,
+  pages =         {L131-L134},
+  title =         {{Oxygen-rich Mass Loss with a Pinch of Salt: NaCl in
+                   the Circumstellar Gas of IK Tauri and VY Canis
+                   Majoris}},
+  volume =        {668},
+  year =          {2007},
+  abstract =      {The NaCl molecule has been observed in the
+                   circumstellar envelopes of VY Canis Majoris (VY CMa)
+                   and IK Tauri (IK Tau)-the first identifications of a
+                   metal refractory in oxygen-rich shells of evolved
+                   stars. Five rotational transitions of NaCl at 1 and 2
+                   mm were detected toward VY CMa and three 1 mm lines
+                   were observed toward IK Tau, using the telescopes of
+                   the Arizona Radio Observatory. In both objects, the
+                   line widths of the NaCl profiles were extremely
+                   narrow relative to those of other molecules,
+                   indicating that sodium chloride has not reached the
+                   terminal outflow velocity in either star, likely a
+                   result of early condensation onto grains. Modeling
+                   the observed spectra suggests abundances, relative to
+                   H2, of f~5×10-9 in VY CMa and f~4×10-9 in IK Tau,
+                   with source sizes of 0.5" and 0.3", respectively. The
+                   extent of these sources is consistent with the size
+                   of the dust acceleration zones in both stars. NaCl
+                   therefore appears to be at least as abundant in
+                   O-rich shells as compared to C-rich envelopes, where
+                   f~(0.2-2)×10-9, although it appears to condense out
+                   earlier in the O-rich case. Chemical equilibrium
+                   calculations indicate that NaCl is the major carrier
+                   of sodium at T~1100 K for oxygen-rich stars, with
+                   predicted fractional abundances in good agreement
+                   with the observations. These measurements suggest
+                   that crystalline salt may be an important condensate
+                   for sodium in both C- and O-rich circumstellar
+                   shells.},
+  doi =           {10.1086/522928},
+}
+
+@article{Highberger2003a,
+  author =        {{Highberger}, J.~L. and {Thomson}, K.~J. and
+                   {Young}, P.~A. and {Arnett}, D. and {Ziurys}, L.~M.},
+  journal =       {\apj},
+  month =         aug,
+  pages =         {393-401},
+  title =         {{The Salty Scrambled Egg: Detection of NaCl Toward
+                   CRL 2688}},
+  volume =        {593},
+  year =          {2003},
+  abstract =      {NaCl has been detected toward the circumstellar
+                   envelope of the post-AGB star CRL 2688 using the IRAM
+                   30 m telescope, the first time this molecule has been
+                   identified in a source other than IRC +10216. The
+                   J=7-->6, 11-->10, 12-->11, and 18-->17 transitions of
+                   NaCl at 1, 2, and 3 mm have been observed, as well as
+                   the J=8-->7 line of the 37Cl isotopomer. The
+                   J=12-->11 line was also measured at the ARO 12 m
+                   telescope. An unsuccessful search was additionally
+                   conducted for AlCl toward CRL 2688, although in the
+                   process new transitions of NaCN were observed. Both
+                   NaCl and NaCN were found to be present in the AGB
+                   remnant wind, as suggested by their U-shaped line
+                   profiles, indicative of emission arising from an
+                   optically thin, extended shell-like source of radius
+                   ~10"-12". These data contrast with past results in
+                   IRC +10216, where the distribution of both molecules
+                   is confined to within a few arcseconds of the star. A
+                   high degree of excitation is required for the
+                   transitions observed for NaCl and NaCN; therefore,
+                   these two species likely arise in the region where
+                   the high-velocity outflow has collided with the
+                   remnant wind. Here the effects of shocks and clumping
+                   due to Rayleigh-Taylor instabilities have raised the
+                   densities and temperatures significantly. The shell
+                   source is thus likely to be clumpy and irregular. The
+                   chemistry producing the sodium compounds is
+                   consequently more complex than simple LTE formation.
+                   Abundances of NaCl and NaCN, relative to H2, are
+                   f~1.6×10-10 and ~5.2×10-9, respectively, while the
+                   upper limit to AlCl is f<2×10-9. These values differ
+                   substantially from those in IRC +10216, where AlCl
+                   has an abundance near 10-7. The NaCl observations
+                   additionally indicate a chlorine isotope ratio of
+                   35Cl/37Cl=2.1+/-0.8 in CRL 2688, suggestive of
+                   s-process enhancement of chlorine 37.},
+  doi =           {10.1086/376446},
+}
+
 @article{Caris2004a,
   author =        {{Caris}, M. and {Lewen}, F. and
                    {M{\"u}ller}, H.~S.~P. and {Winnewisser}, G.},
@@ -103,6 +195,228 @@
   doi =           {10.1093/mnras/stu944},
 }
 
+@article{McGuire2018a,
+  author =        {{McGuire}, Brett~A. and {Martin-Drumel}, Marie-Aline and
+                   {Lee}, Kin~Long~Kelvin and {Stanton}, John~F. and
+                   {Gottlieb}, Carl~A. and {McCarthy}, Michael~C.},
+  month =         {Apr},
+  title =         {Vibrational Satellites of C$_2$S, C$_3$S, and C$_4$S:
+                   Microwave Spectral Taxonomy as a Stepping Stone to
+                   the Millimeter-Wave Band},
+  year =          {2018},
+  abstract =      {We present a microwave spectral taxonomy study of
+                   several hydrocarbon/CS$_2$ discharge mixtures in
+                   which more than 60 distinct chemical species, their
+                   more abundant isotopic species, and/or their
+                   vibrationally excited states were detected using
+                   chirped-pulse and cavity Fourier-transform microwave
+                   spectroscopies. Taken together, in excess of 85
+                   unique variants were detected, including several new
+                   isotopic species and more than 25 new vibrationally
+                   excited states of C$_2$S, C$_3$S, and C$_4$S, which
+                   have been assigned on the basis of published
+                   vibration-rotation interaction constants for C$_3$S,
+                   or newly calculated ones for C$_2$S and C$_4$S. On
+                   the basis of these precise, low-frequency
+                   measurements, several vibrationally exited states of
+                   C$_2$S and C$_3$S were subsequently identified in
+                   archival millimeter-wave data in the 253--280 GHz
+                   frequency range, ultimately providing highly accurate
+                   catalogs for astronomical searches. As part of this
+                   work, formation pathways of the two smaller
+                   carbon-sulfur chains were investigated using $^{13}$C
+                   isotopic spectroscopy, as was their vibrational
+                   excitation. The present study illustrates the utility
+                   of microwave spectral taxonomy as a tool for complex
+                   mixture analysis, and as a powerful and convenient
+                   `stepping stone' to higher frequency measurements in
+                   the millimeter and submillimeter bands.},
+}
+
+@article{Hirota2014a,
+  author =        {{Hirota}, T. and {Kim}, M.~K. and {Kurono}, Y. and
+                   {Honma}, M.},
+  journal =       {\apjl},
+  month =         feb,
+  pages =         {L28},
+  title =         {{A Hot Molecular Circumstellar Disk around the
+                   Massive Protostar Orion Source I}},
+  volume =        {782},
+  year =          {2014},
+  abstract =      {We report new Atacama Large Millimeter/Submillimeter
+                   Array (ALMA) observations of a circumstellar disk
+                   around Source I in Orion KL, an archetype of massive
+                   protostar candidates. We detected two ortho-H2O lines
+                   at 321 GHz (102, 9-93, 6) and 336 GHz (nu2 = 1, 52,
+                   3-61, 6) for the first time in Source I. The latter
+                   one is in a vibrationally excited state at the lower
+                   state energy of 2939 K, suggesting evidence of hot
+                   molecular gas close to Source I. The integrated
+                   intensity map of the 321 GHz line is elongated along
+                   the bipolar outflow while the 336 GHz line map is
+                   unresolved with a beam size of 0.''4. Both of these
+                   maps show velocity gradients perpendicular to the
+                   bipolar outflow. The velocity centroid map of the 321
+                   GHz line implies a spatial and velocity structure
+                   similar to that of vibrationally excited SiO masers
+                   tracing the root of the outflow emanating from the
+                   disk surface. In contrast, the 336 GHz line is most
+                   likely emitting from the disk midplane with a
+                   diameter of 0.''2 (84 AU) as traced by radio
+                   continuum emission and a dark lane devoid of the
+                   vibrationally excited SiO maser emission. The
+                   observed velocity gradient and the spectral profile
+                   of the 336 GHz H2O line can be reconciled with a
+                   model of an edge-on ring-like structure with an
+                   enclosed mass of >7 M &sun; and an excitation
+                   temperature of >3000 K. The present results provide
+                   further evidence of a hot and neutral circumstellar
+                   disk rotating around Source I with a diameter of ~100
+                   AU scale.},
+  doi =           {10.1088/2041-8205/782/2/L28},
+  eid =           {L28},
+}
+
+@article{Plambeck2016a,
+  author =        {{Plambeck}, R.~L. and {Wright}, M.~C.~H.},
+  journal =       {\apj},
+  month =         dec,
+  pages =         {219},
+  title =         {{ALMA Observations of Orion Source I at 350 and 660
+                   GHz}},
+  volume =        {833},
+  year =          {2016},
+  abstract =      {Orion Source I (``SrcI'') is the protostar at the
+                   center of the Kleinmann-Low Nebula. ALMA observations
+                   of SrcI with 0."2 angular resolution were made at 350
+                   and 660 GHz to search for the H26alpha and H21alpha
+                   hydrogen recombination lines and to measure the
+                   continuum flux densities. The recombination lines
+                   were not detected, ruling out the possibility that
+                   SrcI is a hypercompact H II region. The deconvolved
+                   size of the continuum source is approximately 0."23
+                   × 0."07 (˜100 × 30 au); it is interpreted as a
+                   disk viewed almost edge-on. Optically thick thermal
+                   emission from ˜500 K dust is the most plausible
+                   source of the continuum, even at frequencies as low
+                   as 43 GHz; the disk mass is most likely in the range
+                   0.02-0.2 {M}&sun; . A rich spectrum of molecular
+                   lines is detected, mostly from sulfur- and
+                   silicon-rich molecules like SO, SO2, and SiS, but
+                   also including vibrationally excited CO and several
+                   unidentified transitions. Lines with upper energy
+                   levels {E}{{U}}\gt 500 K appear in emission and are
+                   symmetric about the source's LSR velocity of 5 {km}
+                   {{{s}}}-1, while lines with {E}{{U}}\lt 500 K appear
+                   as blueshifted absorption features against the
+                   continuum, indicating that they originate in
+                   outflowing gas. The emission lines exhibit a velocity
+                   gradient along the major axis of the disk that is
+                   consistent with rotation around a 5-7 {M}&sun;
+                   central object. The relatively low mass of SrcI and
+                   the existence of a 100 au disk around it are
+                   difficult to reconcile with the model in which SrcI
+                   and the nearby Becklin-Neugebauer Object were ejected
+                   from a multiple system 500 years ago.},
+  doi =           {10.3847/1538-4357/833/2/219},
+  eid =           {219},
+}
+
+@article{Ginsburg2018a,
+  author =        {{Ginsburg}, A. and {Bally}, J. and {Barnes}, A. and
+                   {Bastian}, N. and {Battersby}, C. and {Beuther}, H. and
+                   {Brogan}, C. and {Contreras}, Y. and {Corby}, J. and
+                   {Darling}, J. and {De Pree}, C. and
+                   {Galv{\'a}n-Madrid}, R. and {Garay}, G. and
+                   {Henshaw}, J. and {Hunter}, T. and
+                   {Kruijssen}, J.~M.~D. and {Longmore}, S. and {Lu}, X. and
+                   {Meng}, F. and {Mills}, E.~A.~C. and {Ott}, J. and
+                   {Pineda}, J.~E. and {S{\'a}nchez-Monge}, {\'A}. and
+                   {Schilke}, P. and {Schmiedeke}, A. and {Walker}, D. and
+                   {Wilner}, D.},
+  journal =       {\apj},
+  month =         feb,
+  pages =         {171},
+  title =         {{Distributed Star Formation throughout the Galactic
+                   Center Cloud Sgr B2}},
+  volume =        {853},
+  year =          {2018},
+  abstract =      {We report ALMA observations with resolution ≈0."5
+                   at 3 mm of the extended Sgr B2 cloud in the Central
+                   Molecular Zone (CMZ). We detect 271 compact sources,
+                   most of which are smaller than 5000 au. By ruling out
+                   alternative possibilities, we conclude that these
+                   sources consist of a mix of hypercompact H II regions
+                   and young stellar objects (YSOs). Most of the newly
+                   detected sources are YSOs with gas envelopes that,
+                   based on their luminosities, must contain objects
+                   with stellar masses {M}* ≳ 8 {M}o . Their spatial
+                   distribution spread over a ~12 × 3 pc region
+                   demonstrates that Sgr B2 is experiencing an extended
+                   star formation event, not just an isolated
+                   ``starburst'' within the protocluster regions. Using
+                   this new sample, we examine star formation thresholds
+                   and surface density relations in Sgr B2. While all of
+                   the YSOs reside in regions of high column density
+                   (N({{{H}}}2)≳ 2× {10}23 {{cm}}-2), not all regions
+                   of high column density contain YSOs. The observed
+                   column density threshold for star formation is
+                   substantially higher than that in solar vicinity
+                   clouds, implying either that high-mass star formation
+                   requires a higher column density or that any star
+                   formation threshold in the CMZ must be higher than in
+                   nearby clouds. The relation between the surface
+                   density of gas and stars is incompatible with
+                   extrapolations from local clouds, and instead stellar
+                   densities in Sgr B2 follow a linear {{{Sigma }}}*
+                   {--}{{{Sigma }}}{gas} relation, shallower than that
+                   observed in local clouds. Together, these points
+                   suggest that a higher volume density threshold is
+                   required to explain star formation in CMZ clouds.},
+  doi =           {10.3847/1538-4357/aaa6d4},
+  eid =           {171},
+}
+
+@article{Girart2017a,
+  author =        {{Girart}, J.~M. and {Estalella}, R. and
+                   {Fern{\'a}ndez-L{\'o}pez}, M. and {Curiel}, S. and
+                   {Frau}, P and {Galvan-Madrid}, R. and {Rao}, R. and
+                   {Busquet}, G. and {Ju{\'a}rez}, C.},
+  journal =       {ArXiv e-prints},
+  month =         jul,
+  title =         {{The circumestellar disk of the B0 protostar powering
+                   the HH 80-81 radio jet}},
+  year =          {2017},
+  abstract =      {We present subarcsecond angular resolution
+                   observations carried out with the Submillimeter Array
+                   (SMA) at 880 $\mu$m centered at the B0-type protostar
+                   GGD27~MM1, the driving source of the parsec scale HH
+                   80-81 jet. We constrain its polarized continuum
+                   emission to be $\lesssim0.8\%$ at this wavelength.
+                   Its submm spectrum is dominated by sulfur-bearing
+                   species tracing a rotating disk--like structure (SO
+                   and SO$_2$ isotopologues mainly), but also shows
+                   HCN-bearing and CH$_3$OH lines, which trace the disk
+                   and the outflow cavity walls excavated by the HH
+                   80-81 jet. The presence of many sulfurated lines
+                   could indicate the presence of shocked gas at the
+                   disk's centrifugal barrier or that MM1 is a hot core
+                   at an evolved stage. The resolved SO$_2$ emission
+                   traces very well the disk kinematics and we fit the
+                   SMA observations using a thin-disk Keplerian model,
+                   which gives the inclination (47$^{\circ}$), the inner
+                   ($\lesssim170$ AU) and outer ($\sim950-1300$~AU)
+                   radii and the disk's rotation velocity (3.4 km
+                   s$^{-1}$ at a putative radius of 1700 AU). We roughly
+                   estimate a protostellar dynamical mass of 4-18\msun.
+                   MM2 and WMC cores show, comparatively, an almost
+                   empty spectra suggesting that they are associated
+                   with extended emission detected in previous
+                   low-angular resolution observations, and therefore
+                   indicating youth (MM2) or the presence of a less
+                   massive object (WMC).},
+}
+
 @article{Ginsburg2018b,
   author =        {{Ginsburg}, A. and {Bally}, J. and {Goddi}, C. and
                    {Plambeck}, R. and {Wright}, M.},
@@ -136,98 +450,6 @@
                    molecular outflow in Orion.},
   doi =           {10.3847/1538-4357/aac205},
   eid =           {119},
-}
-
-@article{Highberger2003a,
-  author =        {{Highberger}, J.~L. and {Thomson}, K.~J. and
-                   {Young}, P.~A. and {Arnett}, D. and {Ziurys}, L.~M.},
-  journal =       {\apj},
-  month =         aug,
-  pages =         {393-401},
-  title =         {{The Salty Scrambled Egg: Detection of NaCl Toward
-                   CRL 2688}},
-  volume =        {593},
-  year =          {2003},
-  abstract =      {NaCl has been detected toward the circumstellar
-                   envelope of the post-AGB star CRL 2688 using the IRAM
-                   30 m telescope, the first time this molecule has been
-                   identified in a source other than IRC +10216. The
-                   J=7-->6, 11-->10, 12-->11, and 18-->17 transitions of
-                   NaCl at 1, 2, and 3 mm have been observed, as well as
-                   the J=8-->7 line of the 37Cl isotopomer. The
-                   J=12-->11 line was also measured at the ARO 12 m
-                   telescope. An unsuccessful search was additionally
-                   conducted for AlCl toward CRL 2688, although in the
-                   process new transitions of NaCN were observed. Both
-                   NaCl and NaCN were found to be present in the AGB
-                   remnant wind, as suggested by their U-shaped line
-                   profiles, indicative of emission arising from an
-                   optically thin, extended shell-like source of radius
-                   ~10"-12". These data contrast with past results in
-                   IRC +10216, where the distribution of both molecules
-                   is confined to within a few arcseconds of the star. A
-                   high degree of excitation is required for the
-                   transitions observed for NaCl and NaCN; therefore,
-                   these two species likely arise in the region where
-                   the high-velocity outflow has collided with the
-                   remnant wind. Here the effects of shocks and clumping
-                   due to Rayleigh-Taylor instabilities have raised the
-                   densities and temperatures significantly. The shell
-                   source is thus likely to be clumpy and irregular. The
-                   chemistry producing the sodium compounds is
-                   consequently more complex than simple LTE formation.
-                   Abundances of NaCl and NaCN, relative to H2, are
-                   f~1.6×10-10 and ~5.2×10-9, respectively, while the
-                   upper limit to AlCl is f<2×10-9. These values differ
-                   substantially from those in IRC +10216, where AlCl
-                   has an abundance near 10-7. The NaCl observations
-                   additionally indicate a chlorine isotope ratio of
-                   35Cl/37Cl=2.1+/-0.8 in CRL 2688, suggestive of
-                   s-process enhancement of chlorine 37.},
-  doi =           {10.1086/376446},
-}
-
-@article{Milam2007a,
-  author =        {{Milam}, S.~N. and {Apponi}, A.~J. and {Woolf}, N.~J. and
-                   {Ziurys}, L.~M.},
-  journal =       {\apjl},
-  month =         oct,
-  pages =         {L131-L134},
-  title =         {{Oxygen-rich Mass Loss with a Pinch of Salt: NaCl in
-                   the Circumstellar Gas of IK Tauri and VY Canis
-                   Majoris}},
-  volume =        {668},
-  year =          {2007},
-  abstract =      {The NaCl molecule has been observed in the
-                   circumstellar envelopes of VY Canis Majoris (VY CMa)
-                   and IK Tauri (IK Tau)-the first identifications of a
-                   metal refractory in oxygen-rich shells of evolved
-                   stars. Five rotational transitions of NaCl at 1 and 2
-                   mm were detected toward VY CMa and three 1 mm lines
-                   were observed toward IK Tau, using the telescopes of
-                   the Arizona Radio Observatory. In both objects, the
-                   line widths of the NaCl profiles were extremely
-                   narrow relative to those of other molecules,
-                   indicating that sodium chloride has not reached the
-                   terminal outflow velocity in either star, likely a
-                   result of early condensation onto grains. Modeling
-                   the observed spectra suggests abundances, relative to
-                   H2, of f~5×10-9 in VY CMa and f~4×10-9 in IK Tau,
-                   with source sizes of 0.5" and 0.3", respectively. The
-                   extent of these sources is consistent with the size
-                   of the dust acceleration zones in both stars. NaCl
-                   therefore appears to be at least as abundant in
-                   O-rich shells as compared to C-rich envelopes, where
-                   f~(0.2-2)×10-9, although it appears to condense out
-                   earlier in the O-rich case. Chemical equilibrium
-                   calculations indicate that NaCl is the major carrier
-                   of sodium at T~1100 K for oxygen-rich stars, with
-                   predicted fractional abundances in good agreement
-                   with the observations. These measurements suggest
-                   that crystalline salt may be an important condensate
-                   for sodium in both C- and O-rich circumstellar
-                   shells.},
-  doi =           {10.1086/522928},
 }
 
 @article{Agundez2012a,
