--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -318,6 +318,10 @@ clearly observe NaCl and KCl in the atmosphere of the disk, it is clear that
 there is a zone where either dust has not yet formed or
 where dust is destroyed and returned to the gas phase.
 
+% I really hope someone takes this too seriously...
+Most likely, the lack of salt in the outflow is because it's dissolved into
+the \water.  The outflow is a beach.
+
 % If we assume the column density for the v=0 state represents the total
 % column of KCl - which is a fairly bad assumption - we can infer the relative abundance.
 % We assume the disk has a column density
