add speculative section

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -331,6 +331,28 @@ the \water.  The outflow is a beach.
 % research; there must be a dust sublimation zone at the surfaces of disks in
 % addition to the radial one.}
 
+\subsubsection{Highly Speculative discussion}
+Why are there salts?  Some possibilities that relate to the formation of the system:
+
+(1) the dust is totally vaporized, so the salts are in the gas phase.  This is
+pretty implausible, since it presumably requires temperatures >1000 K,
+and the highest excitation line can be excited by 4 \um photons.
+Also, if we trust the rotational temperatures, there has to be dust
+shielding to keep the salt-emitting layer cool.  If we trust those temperatures,
+it is hard to understand why the molecules haven't condensed into grains
+already, unless the dust chemical equilibrium timescale is long.  But, because
+RCB stars exist, I think the dust formation timescale is very tiny, more like
+months or years?
+
+(2) the salts are just forming now as they’re released from the star.  This
+doesn’t work at all if the star is accreting, BUT if the collision hypothesis
+is correct, we might see tons of stellar interior products mixed into the
+disk’s atmosphere.  This scenario requires the adsorption timescale for the
+salts to be $>500$ yr, which again seems to contradict the existence of RCB
+stars that rapidly form dust at probably comparable or lower densities.
+Also, I believe Na, K, and Cl are supernova products, not stellar nucleosynthesis
+products, but I am not sure of that!
+
 \subsection{Future prospects}
 The detection of these refractory species in the gas phase in the atmosphere
 of \sourcei's disk hints that other refractory molecules may be present, 
@@ -358,6 +380,7 @@ distribution between vibrational excitation states cannot.}
 \input{K37Cl_line_parameters.tex}
 \input{41KCl_line_parameters.tex}
 \input{41K37Cl_line_parameters.tex}
+
 
 \section{Conclusions}
 
