Updates from ShareLaTeX

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -4,6 +4,7 @@
 \newcommand{\sourcei}{SrcI\xspace}
 \newcommand{\sourcen}{SrcN\xspace}
 \newcommand{\sourcex}{SrcX\xspace}
+\newcommand{\bam}[1]{\textcolor{green!65!black}{\textbf{[BAM: #1]}}}
 \begin{document}
 \input{authors}
 
@@ -34,7 +35,7 @@ comprehensively by \citet{Barton2014a}.  The latter includes over 10$^5$
 transitions for each species with levels up to $E_U\sim5\ee{4}$ K.  Prior to
 this work, no astronomical detections of vibrationally excited transitions of
 any of these species have been reported \citep[e.g., see the review
-by][]{McGuire2018a}.
+by][]{McGuire2018a}. \bam{Did we check w/ Holger here to see where he thought the v=1 for NaCl was seen?  I still can't find a paper w/ it.  It's also probably not correct to cite my paper here - I haven't (yet) compiled vibrational information...}
 
 Disks around forming high-mass stars have been resolved only a handful of
 times.  The disk around Orion Source I (\sourcei) has frequently been observed
@@ -43,7 +44,7 @@ detected trace either an outflow (e.g., SiO) or some combination of the outflow
 and the disk (e.g., \water).  In HH80/81, a $\sim4$ \msun disk around a
 $\sim10-20$ \msun star, several lines of SO$_2$ are associated with the disk
 \citep{Girart2017a}.  Beyond this pair, only disordered structures or
-disk-envelope blends have been observed.
+disk-envelope blends have been observed. \bam{In HH80/81, or do you mean beyond this pair only disordered blends have been observed period, anywhere?}
 
 In \citet[][the brine paper]{Ginsburg2018b}, we used lines of \water and one or
 more unknown species to measure the rotation curve of the disk around \sourcei.
@@ -70,7 +71,7 @@ for the lines discussed here, includes no emission associated with the outflow.
 
 We have clearly identified the carrier of the majority of unidentified lines in
 the \citet{Ginsburg2018b} spectra (only 2-3 lines are unidentified in the B6/B7
-spectra, though there are several in B3 we have not identified).  The lines
+spectra, though there are several in B3 we have not identified). \bam{Can you pass those along?  Might be worth taking another look just in case.}  The lines
 have amplitudes in the range 0.5-3 mJy \perbeam, corresponding
 to brightness temperatures 5-20 K.
 
@@ -247,12 +248,12 @@ since those are readily absorbed by the small grains in the upper layers.
 % to be detected at our $\sim0.4$ mJy/\kms RMS limit.
 
 %{\color{red} This is a note to be incorporated somewhere:}
-The $\delta v=1$ rovibrational transitions of KCl are all around 36.1-38 \um,
+The $\Delta v=1$ rovibrational transitions of KCl are all around 36.1-38 \um,
 while the NaCl transitions are in the range 27.6-30 \um.
 More interesting for constraining the exciting source, though, are the v=0 to
 v=1 through v=6 lines.
 For example, the KCl v=6-0 J=1-0 line is at 6.13 \um and the NaCl v=7-0 J=1-0
-line is at 4.07 \um.  Assuming the population of these lines are created
+line is at 4.07 \um.  \bam{These would be wickedly forbidden transitions.  Allowed vibrational transitions have $\Delta$V = $\pm$1.  Are there better candidates that would follow that?  Say a v$_6$ - v$_5$ or something?} Assuming the population of these lines are created
 from excitation from the ground state, they require a radiation field with
 significant emission in the 4-6 \um range.
 A blackbody with f $T\approx500-750$ K
@@ -271,7 +272,7 @@ that the starlight is extincted before reaching the salts.
 
 The densities required to produce equilibrium populations within the individual
 vibrationally excited states are very high.  The Einstein A coefficients of the
-$\delta v=1$ transitions are of order $\sim1$ \pers.  If we assume the
+$\Delta v=1$ transitions are of order $\sim1$ \pers.  If we assume the
 collision rates for the salts are similar to SiS, the most similar-mass
 two-atom molecule available from
 \url{http://home.strw.leidenuniv.nl/~moldata/datafiles}, with values
@@ -352,6 +353,8 @@ salts to be $>500$ yr, which again seems to contradict the existence of RCB
 stars that rapidly form dust at probably comparable or lower densities.
 Also, I believe Na, K, and Cl are supernova products, not stellar nucleosynthesis
 products, but I am not sure of that!
+
+\bam{(3) Stupid idea: the salts are ejected from the star, do condense out, and then are being ejected again in the outer edges of the disk as there is some sort of turbulent mixing there grinding the dust back up?  If that's the case though, wouldn't we expect to see SiO there as well? hm...}
 
 \subsection{Future prospects}
 The detection of these refractory species in the gas phase in the atmosphere
