add some comments

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -5,6 +5,7 @@
 \newcommand{\sourcen}{SrcN\xspace}
 \newcommand{\sourcex}{SrcX\xspace}
 \newcommand{\bam}[1]{\textcolor{green!65!black}{\textbf{[BAM: #1]}}}
+\newcommand{\ag}[1]{\textcolor{red!65!black}{\textbf{[AG: #1]}}}
 \begin{document}
 \input{authors}
 
@@ -280,6 +281,13 @@ $\sim10^{-12}-10^{-10}$ cm$^{3}$ \pers, densities exceeding $n>10^{10}$ \percc
 (possibly $n>10^{12}$ \percc, depending on which collisional coefficients are
 used) are required to have collisions dominate over radiation. 
 
+\ag{However, I think there's a problem with the above logic: if the densities
+really are that high, i.e., high enough that there are typically several collisions
+per spontaneous emission, then we should not expect to see any spontaneous emission.
+So instead, we're left with an upper limit density of $n<10^{10}-10^{12}$ \percc,
+but no clear explanation for the apparent consistent rotational temperatures.
+}
+
 
 % Either
 % the higher-excitation lines are too faint {\color{red} do we expect this?}
@@ -354,7 +362,14 @@ stars that rapidly form dust at probably comparable or lower densities.
 Also, I believe Na, K, and Cl are supernova products, not stellar nucleosynthesis
 products, but I am not sure of that!
 
-\bam{(3) Stupid idea: the salts are ejected from the star, do condense out, and then are being ejected again in the outer edges of the disk as there is some sort of turbulent mixing there grinding the dust back up?  If that's the case though, wouldn't we expect to see SiO there as well? hm...}
+\bam{(3) Stupid idea: the salts are ejected from the star, do condense out, and
+then are being ejected again in the outer edges of the disk as there is some
+sort of turbulent mixing there grinding the dust back up?  If that's the case
+though, wouldn't we expect to see SiO there as well? hm...}
+\ag{Since these metals are SN products, both in this case and in case (2),
+we're just talking about putting gas-phase materials out that already
+had the same metallicity as the star.  So I think (3) is best simplified
+as just: ``the dust is naturally `ground up' in the disk''.}
 
 \subsection{Future prospects}
 The detection of these refractory species in the gas phase in the atmosphere
