--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -36,7 +36,12 @@ comprehensively by \citet{Barton2014a}.  The latter includes over 10$^5$
 transitions for each species with levels up to $E_U\sim5\ee{4}$ K.  Prior to
 this work, no astronomical detections of vibrationally excited transitions of
 any of these species have been reported \citep[e.g., see the review
-by][]{McGuire2018a}. \bam{Did we check w/ Holger here to see where he thought the v=1 for NaCl was seen?  I still can't find a paper w/ it.  It's also probably not correct to cite my paper here - I haven't (yet) compiled vibrational information...}
+by][]{McGuire2018a}. \bam{Did we check w/ Holger here to see where he thought
+the v=1 for NaCl was seen?  I still can't find a paper w/ it.  It's also
+probably not correct to cite my paper here - I haven't (yet) compiled
+vibrational information...} \ag{I haven't e-mailed him; you want to do that?
+I was just citing your paper since the information came from your brain...
+we ought to cite you somewhere, if not here}
 
 Disks around forming high-mass stars have been resolved only a handful of
 times.  The disk around Orion Source I (\sourcei) has frequently been observed
