--- a/41KCl_line_parameters.tex
+++ b/41KCl_line_parameters.tex
@@ -11,6 +11,11 @@
 \vspace{-0.75em}\\
  29 & 28 & 217.54317 & 5.5 (0.7) & 6.5 (0.7) & 4.5 (0.4) & 156.7 \\
  13 & 12 & 97.62809 & 4.7 (2.5) & 10.0 (3.2) & 6.5 (1.3) & 32.8 \\
+ 45 & 44 & 334.85439 & 5.1 (0.6) & 2.8 (0.6) & 5.2 (1.0) & 764.9 \\
+&\vspace{-0.75em}\\
+\multicolumn{7}{c}{$v = 1$} \\
+\vspace{-0.75em}\\
+ 31 & 30 & 229.68227 & 2.7 (0.6) & 13.3 (1.0) & 9.6 (0.3) & 962.5 \\
 \hline
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 2$} \\
