--- a/NaCl_line_parameters.tex
+++ b/NaCl_line_parameters.tex
@@ -11,20 +11,28 @@
 \vspace{-0.75em}\\
  26 & 25 & 335.50640 & 5.6 (0.1) & 4.7 (0.1) & 29.1 (0.8) & 736.8 \\
  18 & 17 & 232.50998 & 5.4 (0.2) & 6.6 (0.2) & 23.9 (0.7) & 625.2 \\
+ 17 & 16 & 217.97998 & 5.5 (0.1) & 5.5 (0.1) & 19.3 (0.4) & 1127.5 \\
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 2$} \\
 \vspace{-0.75em}\\
  18 & 17 & 230.77883 & 6.1 (0.1) & 6.1 (0.1) & 19.3 (0.4) & 1138.6 \\
  26 & 25 & 333.00671 & 7.9 (0.3) & 6.5 (0.3) & 21.7 (0.9) & 1249.3 \\
  27 & 26 & 345.76141 & 0.8 (0.9) & 4.7 (0.9) & 11.5 (1.9) & 1265.9 \\
+ 7 & 6 & 89.14960 & 5.5 (0.5) & 5.2 (0.5) & 14.1 (1.1) & 1559.6 \\
+&\vspace{-0.75em}\\
+\multicolumn{7}{c}{$v = 3$} \\
+\vspace{-0.75em}\\
+ 7 & 6 & 88.48417 & 7.9 (0.7) & 6.1 (0.7) & 11.6 (1.1) & 2063.8 \\
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 4$} \\
 \vspace{-0.75em}\\
  8 & 7 & 101.12050 & 7.0 (0.3) & 5.4 (0.3) & 15.6 (0.8) & 2068.6 \\
+ 8 & 7 & 100.36474 & 11.0 (0.5) & 4.9 (0.6) & 10.0 (0.9) & 2567.8 \\
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 5$} \\
 \vspace{-0.75em}\\
  7 & 6 & 87.82283 & 12.0 (0.6) & 5.2 (0.7) & 12.1 (1.2) & 2563.0 \\
+ 8 & 7 & 99.61369 & 15.2 (0.9) & 4.2 (1.0) & 8.1 (1.0) & 3062.2 \\
 \hline
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 6$} \\
