--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -25,7 +25,8 @@
 Molecules consisting of alkali metals and halogens have been detected
 toward evolved stars including the carbon star IRC +10216 \citep{Cernicharo1987a},
 oxygen-rich evolved stars IK Tauri and VY Canis Majoris \citep{Milam2007a},
-and the post-AGB star envelope CRL 2688 \citep{Highberger2003a}.
+the post-AGB star envelope CRL 2688 \citep{Highberger2003a},
+and the AGB star wind around OH 231+4.2 \citep{Sanchez-Contreras2018a}.
 The limited environments in which these molecules have been detected
 suggests that they only exist in the gas phase for a brief period
 when being ejected from dying stars before being incorporated into
@@ -49,8 +50,11 @@ times.  The disk around Orion Source I (\sourcei) has frequently been observed
 detected trace either an outflow (e.g., SiO) or some combination of the outflow
 and the disk (e.g., \water).  In HH80/81, a $\sim4$ \msun disk around a
 $\sim10-20$ \msun star, several lines of SO$_2$ are associated with the disk
-\citep{Girart2017a}.  Beyond this pair, only disordered structures or
-disk-envelope blends have been observed. \bam{In HH80/81, or do you mean beyond this pair only disordered blends have been observed period, anywhere?}
+\citep{Girart2017a}.  Beyond these two sources, only disordered structures or
+disk-envelope blends have been observed. \bam{In HH80/81, or do you mean beyond
+this pair only disordered blends have been observed period, anywhere?}
+\ag{AFAIK, except for the HH80/81 and \sourcei disks, all disks around massive
+stars are ambiguous / not strictly disks.}
 
 In \citet[][the brine paper]{Ginsburg2018b}, we used lines of \water and one or
 more unknown species to measure the rotation curve of the disk around \sourcei.
@@ -77,8 +81,9 @@ for the lines discussed here, includes no emission associated with the outflow.
 
 We have clearly identified the carrier of the majority of unidentified lines in
 the \citet{Ginsburg2018b} spectra (only 2-3 lines are unidentified in the B6/B7
-spectra, though there are several in B3 we have not identified). \bam{Can you pass those along?  Might be worth taking another look just in case.}  The lines
-have amplitudes in the range 0.5-3 mJy \perbeam, corresponding
+spectra, though there are several in B3 we have not identified). \bam{Can you
+pass those along?  Might be worth taking another look just in case.}  The
+detected lines have amplitudes in the range 0.5-3 mJy \perbeam, corresponding
 to brightness temperatures 5-20 K.
 
 In the appendix of \citet{Ginsburg2018b}, we reported that ``there is no
@@ -259,7 +264,13 @@ while the NaCl transitions are in the range 27.6-30 \um.
 More interesting for constraining the exciting source, though, are the v=0 to
 v=1 through v=6 lines.
 For example, the KCl v=6-0 J=1-0 line is at 6.13 \um and the NaCl v=7-0 J=1-0
-line is at 4.07 \um.  \bam{These would be wickedly forbidden transitions.  Allowed vibrational transitions have $\Delta$V = $\pm$1.  Are there better candidates that would follow that?  Say a v$_6$ - v$_5$ or something?} Assuming the population of these lines are created
+line is at 4.07 \um.  \bam{These would be wickedly forbidden transitions.
+Allowed vibrational transitions have $\Delta$V = $\pm$1.  Are there better
+candidates that would follow that?  Say a v$_6$ - v$_5$ or something?}
+\ag{Right, these are too forbidden to be plausible: this paragraph will be
+removed; we need to find another way to excite the molecules up to these states.}
+Assuming
+the population of these lines are created
 from excitation from the ground state, they require a radiation field with
 significant emission in the 4-6 \um range.
 A blackbody with f $T\approx500-750$ K
