Updates from ShareLaTeX

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -276,7 +276,7 @@ significant emission in the 4-6 \um range.
 A blackbody with f $T\approx500-750$ K
 % ($T\approx b / \lambda$, where $b\approx2900$ \um K is Wien's displacement constant)
 peaks in this range.
-
+[MCHW : consistent with Tb observed in the high resolution images]
 
 A plausible scenario is that the hot radiation field from the central star,
 with $T_*\sim4000$ K \citep{Testi2010a}, excites molecules to high vibrational
